# death-calendar

./: .gitignore  Cargo.toml  LICENSE.org  Makefile.toml  README.md  README.org  bacon.toml  build.clj  ci.sh  deny.toml  deps.edn  flake.nix  make.toml  rust-toolchain.toml  tests.edn
.circleci/: config.yml
.github/workflows/: format.yml
src/: death_info.rs  grid_calendar.rs  lib.rs  logarithmic_calendar.rs  main.rs  parse_color.rs  svg_generator.rs
src/calendar_image/: grid.rs  logarithmic.rs  mod.rs
src/wildwestrom/: lifetime_calendar.clj
src/wildwestrom/death_calendar/: core.clj  core.cljc  model.clj
src/wildwestrom/death_calendar/backend/: app.clj  core.clj
src/wildwestrom/lifetime_calendar/: model.clj
test/wildwestrom/: lifetime_calendar_test.clj
test/wildwestrom/death_calendar/: core_test.clj  core_test.cljc  model_test.clj
test/wildwestrom/death_calendar/backend/: app_test.clj  core_test.clj
test/wildwestrom/lifetime_calendar/: model_test.clj
