[package]
name = "death-calendar"
version = "0.4.0"
edition = "2021"
description = "Calculate how much time you have until your ultimate demise."
license = "GPL-3.0-or-later"
repository = "https://github.com/wildwestrom/death-calendar"
readme = "README.md"
keywords = ["life", "death", "time", "calendar"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https: //doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
gregorian = { version = "0.2", features = ["serde"] }
svg = "0.10"
csscolorparser = "0.6"
anyhow = "1"
figment = { version = "0.10.8", features = ["toml"] }
serde = { version = "1", features = ["derive"] }
serde_with = "2"
directories = "4"
once_cell = "1"
