[package]
name = "death-calendar"
version = "0.4.0"
edition = "2021"
description = "Calculate how much time you have until your ultimate demise."
license = "GPL-3.0-or-later"
repository = "https://github.com/wildwestrom/death-calendar"
readme = "README.md"
keywords = ["life", "death", "time", "calendar"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https: //doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
gregorian = { version = "0.2.4", features = ["serde"] }
svg = "0.10.0"
csscolorparser = "0.6.2"
anyhow = "1.0.66"
serde = { version = "1.0.147", features = ["derive"] }
serde_with = "2.1.0"
directories = "4.0.1"
once_cell = "1.16.0"
